# mcp-finance-asistant

./: .gitignore  main.py  pyproject.toml
client/: .env-template  config.yaml  main.py  test-client.py  utils.py
client/agents/: finance_classifier_node.py  finance_experts.py  finance_qa_node.py  ocr_agent.py  rate_limited_tool_node.py  router_node.py  schemas.py
servers/finance/: package-lock.json  package.json  tsconfig.json
servers/finance/src/: env.ts  finance.ts  index.ts
servers/finance/src/notion/: index.ts  notionClient.ts  resources.ts  tools.ts
src/: config.py  config.yaml  main.py  schemas.py  test.py
src/agents/: listener_agent.py  ocr_agent.py  schemas.py  user_info.py  writer_agent.py
