[project]
name = "mcp-finance-asistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.10",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.27",
    "langsmith>=0.3.27",
    "mistralai>=1.6.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]
