[project]
name = "mcp-finance-asistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "langchain-anthropic>=0.3.10",
    "langchain-mcp-adapters>=0.0.8",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.27",
    "langsmith>=0.3.27",
    "mcp>=1.6.0",
    "mistralai>=1.6.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]
